Got beginnings of header working, stared cpp template
Basic mapping of lua property types to C++ types also
happens now.

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,11 @@
 venv/
 .idea/
 
+# We actually want to ignore any *.cpp and *.hpp files, we generate those
+# but we use .j2 templates in the repos.
+*.cpp
+*.hpp
+
 # Prerequisites
 *.d
 
