Get basic program to build
Added the `example.cpp.j2` template, tempalted it and had
to tweak a few things in the source & header file

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 venv/
 .idea/
 
+# our default example program name
+example
+
 # We actually want to ignore any *.cpp and *.hpp files, we generate those
 # but we use .j2 templates in the repos.
 *.cpp
