Render lua file with defaults specified in the new table
Now we have a valid Lua script that can be executed, and
a table of our configured 'lua_table_name' will be available,
with all our properties set to their defaults. w00t!

--- a/examples/player.yaml
+++ b/examples/player.yaml
@@ -1,6 +1,7 @@
 # Player class, YAML spec for lua-to-cpp
 class:
   cpp_name: "Player"
+  lua_table_name: "player"
   properties:
     - name: "maxHealth"
       type: number
